--- a/package.json
+++ b/package.json
@@ -7,7 +7,12 @@
     "start": "node app.js",
     "dev": "nodemon app.js",
     "seed": "node seeders/employee-seed-file.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
+  },
+  "jest": {
+    "testMatch": [
+      "<rootDir>/test/**/*.test.js"
+    ]
   },
   "repository": {
     "type": "git",
@@ -25,5 +30,8 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "pg": "^8.11.2"
+  },
+  "devDependencies": {
+    "jest": "^29.6.4"
   }
 }
